force-app/main/default/objects/Opportunity/fields/Proposed_Market_Share__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Market_Share__c</fullName>
    <defaultValue>0.90</defaultValue>
    <inlineHelpText>To be used to capture the proposed market share for the opportunity.</inlineHelpText>
    <label>Proposed Dom Market Share Target</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>