force-app/main/default/objects/Opportunity/fields/Proposed_Market_Share_Int__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Market_Share_Int__c</fullName>
    <inlineHelpText>This is the projected Int market share as a result of the opportunity being realised.</inlineHelpText>
    <label>Proposed Market Share (Int)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>