force-app/main/default/objects/Opportunity/fields/Proposed_MCA_Routes_Market_Share__c.field-meta.xml
<CustomField>
    <fullName>Proposed_MCA_Routes_Market_Share__c</fullName>
    <defaultValue>0.70</defaultValue>
    <label>Proposed MCA Market Share Target</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>