force-app/main/default/objects/Opportunity/fields/Proposed_Revenue_Amount__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Revenue_Amount__c</fullName>
    <description>delete this</description>
    <inlineHelpText>To be used to capture the proposed revenue amount for the opportunity.</inlineHelpText>
    <label>Proposed Revenue Amount</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>