force-app/main/default/objects/Opportunity/fields/Proposed_Summary__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Summary__c</fullName>
    <description>Deal on a Page Proposed Summary</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Loyalty:Proposed summary of the partnership,include CVP details etc.</inlineHelpText>
    <label>Proposed Summary</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>