force-app/main/default/objects/Opportunity/fields/QDMEstimated_DOM_QF_Revenue__c.field-meta.xml
<CustomField>
    <fullName>QDMEstimated_DOM_QF_Revenue__c</fullName>
    <label>Actual/Estimated Dom QF Revenue</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>