force-app/main/default/objects/Opportunity/fields/QDMEstimated_INT_MCA_Routes_Market_Shar__c.field-meta.xml
<CustomField>
    <fullName>QDMEstimated_INT_MCA_Routes_Market_Shar__c</fullName>
    <label>Actual/Estimated INT MCA Market Share</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>