force-app/main/default/objects/Opportunity/fields/QDMEstimated_INT_QF_Market_Share__c.field-meta.xml
<CustomField>
    <fullName>QDMEstimated_INT_QF_Market_Share__c</fullName>
    <label>Actual/Estimated INT QF Market Share</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>