force-app/main/default/objects/Opportunity/fields/QDMEstimated_INT_QF_Revenue__c.field-meta.xml
<CustomField>
    <fullName>QDMEstimated_INT_QF_Revenue__c</fullName>
    <label>Actual/Estimated INT QF Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>