force-app/main/default/objects/Opportunity/fields/QDMEstimated_QF_Revenue__c.field-meta.xml
<CustomField>
    <fullName>QDMEstimated_QF_Revenue__c</fullName>
    <description>prev value (Current QF Revenue / Current_Revenue)</description>
    <label>Actual/Estimated QF Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>