force-app/main/default/objects/Opportunity/fields/quest_lead_number__c.field-meta.xml
<CustomField>
    <fullName>quest_lead_number__c</fullName>
    <description>field used for the purpose of data migration when the lead extract does not have a column referencing the opportunity ID</description>
    <externalId>true</externalId>
    <label>quest lead number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>