force-app/main/default/objects/Opportunity/fields/quest_opportunity_number__c.field-meta.xml
<CustomField>
    <fullName>quest_opportunity_number__c</fullName>
    <description>quest opportunity number</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>quest opportunity number</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>