force-app/main/default/objects/Opportunity/fields/Ramp_up_factor__c.field-meta.xml
<CustomField>
    <fullName>Ramp_up_factor__c</fullName>
    <description>This field is used for Loyalty Commercial Opportunity by Loyalty Commercial Managers.</description>
    <inlineHelpText>Modifies deal value to take into account how long it will take for offer to achieve full market penetration.
Values represented in days.</inlineHelpText>
    <label>Ramp up factor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>25</fullName>
            </value>
            <value>
                <fullName>50</fullName>
            </value>
            <value>
                <fullName>75</fullName>
            </value>
            <value>
                <fullName>25%</fullName>
                <isActive>false</isActive>
                <label>25%</label>
            </value>
            <value>
                <fullName>50%</fullName>
                <isActive>false</isActive>
                <label>50%</label>
            </value>
            <value>
                <fullName>75%</fullName>
                <isActive>false</isActive>
                <label>75%</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>