force-app/main/default/objects/Opportunity/fields/Reason_At_Risk__c.field-meta.xml
<CustomField>
    <fullName>Reason_At_Risk__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Reason At Risk</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>