force-app/main/default/objects/Opportunity/fields/Related_Registry_ID__c.field-meta.xml
<CustomField>
    <fullName>Related_Registry_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Related Registry ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>