force-app/main/default/objects/Opportunity/fields/Revenue_Trend__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Trend__c</fullName>
    <formula>IF( QDMEstimated_QF_Revenue__c != 0, 
IF( 
(((Amount/QDMEstimated_QF_Revenue__c)-1)*100) &gt;= 5, 
IMAGE(&quot;/resource/Increment_up&quot;, &quot;Up&quot;), 
IF( 
(((Amount/QDMEstimated_QF_Revenue__c)-1)*100) &lt;= -5, 
IMAGE(&quot;/resource/Increment_Down&quot;, &quot;Down&quot;), 
IMAGE(&quot;/resource/Increment_Nochange&quot;, &quot;No Change&quot;) 
) 
), 
IMAGE(&quot;/resource/Increment_up&quot;, &quot;Up&quot;) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Projected Revenue Outcome</label>
    <type>Text</type>
</CustomField>