force-app/main/default/objects/Opportunity/fields/Revenue_Trend_URL__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Trend_URL__c</fullName>
    <description>This is to refer in conga document generation</description>
    <formula>IF( QDMEstimated_QF_Revenue__c != 0, 

IF( 
(((Amount/QDMEstimated_QF_Revenue__c)-1)*100) &gt;= 5, 
LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260))

&amp;&quot;resource/Increment_up&quot; ,
IF( 
(((Amount/QDMEstimated_QF_Revenue__c)-1)*100) &lt;= -5,
LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260))

&amp;&quot;resource/Increment_Down&quot; ,  
LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, 

$Api.Partner_Server_URL_260))&amp;&quot;resource/Increment_Nochange&quot;
)
), 
LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260))

&amp;&quot;resource/Increment_up&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Revenue Trend URL</label>
    <type>Text</type>
</CustomField>