force-app/main/default/objects/Opportunity/fields/RFP_Process__c.field-meta.xml
<CustomField>
    <fullName>RFP_Process__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Please flag here if this renewal or new business contract is through an &quot;Request for Proposal / Tender&quot; process.</inlineHelpText>
    <label>RFP/Tender Process</label>
    <type>Checkbox</type>
</CustomField>