force-app/main/default/objects/Opportunity/fields/RFP_RFT__c.field-meta.xml
<CustomField>
    <fullName>RFP_RFT__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag if this opportunity is as a result of a Request For Proposal (RFP) / Request For Tender (RFT).</description>
    <inlineHelpText>Please flag if this opportunity is as a result of a RFP/RFT</inlineHelpText>
    <label>RFP/ RFT</label>
    <type>Checkbox</type>
</CustomField>