force-app/main/default/objects/Opportunity/fields/RFP_Submission_Date__c.field-meta.xml
<CustomField>
    <fullName>RFP_Submission_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>RFP Submission Date</label>
    <type>Date</type>
</CustomField>