force-app/main/default/objects/Opportunity/fields/Risk_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Risk_Indicator__c</fullName>
    <formula>CASE(TEXT(Risk_Level__c),
&quot;Severe&quot;,IMAGE(&quot;/img/samples/flag_red.gif&quot;,&quot;red&quot;), 
&quot;Moderate&quot;,IMAGE(&quot;/img/samples/flag_green.gif&quot;,&quot;green&quot;), 
&quot;&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Risk Indicator</label>
    <type>Text</type>
</CustomField>