force-app/main/default/objects/Opportunity/fields/SC_ID__c.field-meta.xml
<CustomField>
    <fullName>SC_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>SalesCockpit ID</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>