force-app/main/default/objects/Opportunity/fields/Senior_Executive_Action__c.field-meta.xml
<CustomField>
    <fullName>Senior_Executive_Action__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Senior Executive Action</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>