force-app/main/default/objects/Opportunity/fields/Stakeholders__c.field-meta.xml
<CustomField>
    <fullName>Stakeholders__c</fullName>
    <description>Deal on a Page Stakeholders</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Analytics; Financial Commercial; Group Tax; Legal; Marketing; Operations; QBR; QFF; Red Planet; Retail Product Team; Other</inlineHelpText>
    <label>Stakeholders</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>