force-app/main/default/objects/Opportunity/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>To be used for Group Sales Opportunity</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Payment Received</fullName>
            </value>
            <value>
                <fullName>Deposit Taken</fullName>
            </value>
            <value>
                <fullName>Full Amount Paid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>