force-app/main/default/objects/Opportunity/fields/Status_Last_Changed__c.field-meta.xml
<CustomField>
    <fullName>Status_Last_Changed__c</fullName>
    <description>Opportunity Status last changed date</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Status Last Changed</label>
    <type>Date</type>
</CustomField>