force-app/main/default/objects/Opportunity/fields/Sub_Type_Level_1__c.field-meta.xml
<CustomField>
    <fullName>Sub_Type_Level_1__c</fullName>
    <label>Sub Type (Level 1)</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Ad Hoc Charter Contract</fullName>
            </value>
            <value>
                <fullName>AEQBRC</fullName>
            </value>
            <value>
                <fullName>AEQCC</fullName>
            </value>
            <value>
                <fullName>Alliance</fullName>
            </value>
            <value>
                <fullName>Aquire</fullName>
            </value>
            <value>
                <fullName>Brand Sponsorship</fullName>
            </value>
            <value>
                <fullName>Charity Sponsorship</fullName>
            </value>
            <value>
                <fullName>Commercial - Outside contracted terms</fullName>
            </value>
            <value>
                <fullName>Commercial Sponsorship</fullName>
            </value>
            <value>
                <fullName>Community Sponsorship</fullName>
            </value>
            <value>
                <fullName>Conference</fullName>
            </value>
            <value>
                <fullName>Contractual</fullName>
            </value>
            <value>
                <fullName>Corporate</fullName>
            </value>
            <value>
                <fullName>Currently In Contract</fullName>
            </value>
            <value>
                <fullName>E-commerce</fullName>
            </value>
            <value>
                <fullName>Educational</fullName>
            </value>
            <value>
                <fullName>Entertainment</fullName>
            </value>
            <value>
                <fullName>Freight</fullName>
            </value>
            <value>
                <fullName>Group Sales</fullName>
            </value>
            <value>
                <fullName>L&amp;D</fullName>
            </value>
            <value>
                <fullName>Learning Hub</fullName>
            </value>
            <value>
                <fullName>Leisure</fullName>
            </value>
            <value>
                <fullName>Marketing Fund</fullName>
            </value>
            <value>
                <fullName>Mining</fullName>
            </value>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>New Charter Contract</fullName>
            </value>
            <value>
                <fullName>Not Currently In Contract</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Other Sales Development Opportunity</fullName>
            </value>
            <value>
                <fullName>QBD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>