force-app/main/default/objects/Opportunity/fields/Sub_Type_Level_2__c.field-meta.xml
<CustomField>
    <fullName>Sub_Type_Level_2__c</fullName>
    <label>Sub Type (Level 2)</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Sub_Type_Level_1__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Renewal</fullName>
            </value>
            <value>
                <fullName>Variation</fullName>
            </value>
            <value>
                <fullName>Non-Contractual Other</fullName>
            </value>
            <value>
                <fullName>New Contract</fullName>
            </value>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>National Sales Agency Agreement</fullName>
            </value>
            <value>
                <fullName>Sales Agency Agreement</fullName>
            </value>
            <value>
                <fullName>Wholesale Sales Agency Agreement</fullName>
            </value>
            <value>
                <fullName>Wholesale Fares Only Agreement</fullName>
            </value>
            <value>
                <fullName>Independent Sales Agency Agreement</fullName>
            </value>
            <value>
                <fullName>Advertising</fullName>
            </value>
            <value>
                <fullName>Incentive</fullName>
            </value>
            <value>
                <fullName>Event (incl. Conferences)</fullName>
            </value>
            <value>
                <fullName>Reward/Recognition</fullName>
            </value>
            <value>
                <fullName>Campaign</fullName>
            </value>
            <value>
                <fullName>Sponsorship</fullName>
            </value>
            <value>
                <fullName>Pricing intiative</fullName>
            </value>
            <value>
                <fullName>Fares &amp; technical</fullName>
            </value>
            <value>
                <fullName>Product &amp; value</fullName>
            </value>
            <value>
                <fullName>Servicing &amp; support</fullName>
            </value>
            <value>
                <fullName>Partner Plus</fullName>
            </value>
            <value>
                <fullName>MICE</fullName>
            </value>
            <value>
                <fullName>Mining</fullName>
            </value>
            <value>
                <fullName>Corporate</fullName>
            </value>
            <value>
                <fullName>Educational</fullName>
            </value>
            <value>
                <fullName>Tour Operator</fullName>
            </value>
            <value>
                <fullName>Sporting</fullName>
            </value>
            <value>
                <fullName>Entertainment</fullName>
            </value>
            <value>
                <fullName>Leisure</fullName>
            </value>
            <value>
                <fullName>Conference</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>