force-app/main/default/objects/Opportunity/fields/Sub_Type_Level_3__c.field-meta.xml
<CustomField>
    <fullName>Sub_Type_Level_3__c</fullName>
    <label>Sub Type (Level 3)</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Sub_Type_Level_2__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Single POS</fullName>
            </value>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Renewal</fullName>
            </value>
            <value>
                <fullName>Variation</fullName>
            </value>
            <value>
                <fullName>Multiple POS</fullName>
            </value>
            <value>
                <fullName>oneworld</fullName>
            </value>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>DOM</fullName>
            </value>
            <value>
                <fullName>INT</fullName>
            </value>
            <value>
                <fullName>DOM &amp; INT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>