force-app/main/default/objects/Opportunity/fields/Sub_Type_Loyalty__c.field-meta.xml
<CustomField>
    <fullName>Sub_Type_Loyalty__c</fullName>
    <description>Used as a sub type field for loyalty based on type</description>
    <label>Sub Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Coalition</fullName>
            </value>
            <value>
                <fullName>Financial Services</fullName>
            </value>
            <value>
                <fullName>QBR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>