force-app/main/default/objects/Opportunity/fields/Switching_to_a_competitor__c.field-meta.xml
<CustomField>
    <fullName>Switching_to_a_competitor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Switching to a competitor</label>
    <type>Checkbox</type>
</CustomField>