force-app/main/default/objects/Opportunity/fields/Target_Volume_in_kg__c.field-meta.xml
<CustomField>
    <fullName>Target_Volume_in_kg__c</fullName>
    <label>Target Volume in kg</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>