force-app/main/default/objects/Opportunity/fields/Tax_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Tax_Remarks__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Tax Remarks</label>
    <type>TextArea</type>
</CustomField>