force-app/main/default/objects/Opportunity/fields/Total_Incremental_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Total_Incremental_Revenue__c</fullName>
    <formula>Baseline_Total_Revenue__c - Campaign_Total_Revenue__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Incremental Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>