force-app/main/default/objects/Opportunity/fields/Total_Points__c.field-meta.xml
<CustomField>
    <fullName>Total_Points__c</fullName>
    <description>Loyalty Sales commercial field</description>
    <inlineHelpText>Total points expected from partnership</inlineHelpText>
    <label>Total Points</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>