force-app/main/default/objects/Opportunity/fields/Total_Program_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Program_Amount__c</fullName>
    <description>Addition of Program Fee and Annualised Deal Value (Proposed Annualised Deal Amount)</description>
    <formula>Program_Fee__c +   Amount</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total cost of program</inlineHelpText>
    <label>Total Program Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>