force-app/main/default/objects/Opportunity/fields/Total_Revenue_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Revenue_Amount__c</fullName>
    <label>Total Revenue Amount</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>