force-app/main/default/objects/Opportunity/fields/Treasury__c.field-meta.xml
<CustomField>
    <fullName>Treasury__c</fullName>
    <label>Treasury</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Engaged</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>