force-app/main/default/objects/Opportunity/fields/Treasury_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Treasury_Remarks__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Treasury Remarks</label>
    <type>TextArea</type>
</CustomField>