force-app/main/default/objects/Opportunity/fields/Turnover__c.field-meta.xml
<CustomField>
    <fullName>Turnover__c</fullName>
    <description>Multiplication of Customer Base and Average Spend per Customer</description>
    <formula>Customer_Base__c * Average_Spend_Per_Customer__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Partners annual turnover</inlineHelpText>
    <label>Turnover</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>