force-app/main/default/objects/Opportunity/fields/Variance_Market_Share__c.field-meta.xml
<CustomField>
    <fullName>Variance_Market_Share__c</fullName>
    <formula>Campaign_Market_Share__c - Baseline_Market_Share__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Variance Market Share</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>