force-app/main/default/objects/Opportunity/fields/Variance_QF_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Variance_QF_Revenue__c</fullName>
    <formula>Campaign_QF_Revenue__c -Baseline_QF_Spend__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Variance QF Revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>