force-app/main/default/objects/Opportunity/fields/Volume_Deal__c.field-meta.xml
<CustomField>
    <fullName>Volume_Deal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Volume Deal</label>
    <type>Checkbox</type>
</CustomField>