force-app/main/default/objects/Opportunity/recordTypes/Adhoc_Charter.recordType-meta.xml
<RecordType>
    <fullName>Adhoc_Charter</fullName>
    <active>true</active>
    <businessProcess>Charter</businessProcess>
    <description>To be used for Adhoc Charter opportunity</description>
    <label>Adhoc Charter</label>
</RecordType>