force-app/main/default/objects/Opportunity/recordTypes/Agency_Partnerships.recordType-meta.xml
<RecordType>
    <fullName>Agency_Partnerships</fullName>
    <active>true</active>
    <businessProcess>Qantas Sales Process</businessProcess>
    <description>To be used to capture all types of opportunities for Agency Partnerships</description>
    <label>Agency Partnerships</label>
</RecordType>