force-app/main/default/objects/Opportunity/recordTypes/B_G_Campaigns.recordType-meta.xml
<RecordType>
    <fullName>B_G_Campaigns</fullName>
    <active>true</active>
    <businessProcess>Business and Government Campaigns</businessProcess>
    <label>B&amp;G Campaigns</label>
</RecordType>