force-app/main/default/objects/Opportunity/recordTypes/Business_and_Government.recordType-meta.xml
<RecordType>
    <fullName>Business_and_Government</fullName>
    <active>true</active>
    <businessProcess>Qantas Sales Process</businessProcess>
    <description>To be used to capture all opportunities for Business and Government</description>
    <label>Business and Government</label>
</RecordType>