force-app/main/default/objects/Opportunity/recordTypes/DPP_Onboarding_Partners.recordType-meta.xml
<RecordType>
    <fullName>DPP_Onboarding_Partners</fullName>
    <active>true</active>
    <businessProcess>Distribution Partner Platform Onboarding Process</businessProcess>
    <description>Used for Distribution Partner Platform (DPP) Onboarding - Partner</description>
    <label>DPP Onboarding Partners</label>
</RecordType>