force-app/main/default/objects/Opportunity/recordTypes/Freight.recordType-meta.xml
<RecordType>
    <fullName>Freight</fullName>
    <active>true</active>
    <businessProcess>Freight Sales</businessProcess>
    <description>To be used to capture all opportunities for Qantas Freight</description>
    <label>Freight</label>
</RecordType>