force-app/main/default/objects/Opportunity/recordTypes/Future_Planet.recordType-meta.xml
<RecordType>
    <fullName>Future_Planet</fullName>
    <active>true</active>
    <businessProcess>Corporate and Government Sales Process</businessProcess>
    <description>To be used to capture all opportunities for Future Planet</description>
    <label>Future Planet</label>
</RecordType>