force-app/main/default/objects/Opportunity/recordTypes/Global_opportunity.recordType-meta.xml
<RecordType>
    <fullName>Global_opportunity</fullName>
    <active>true</active>
    <businessProcess>Qantas Sales Process</businessProcess>
    <description>A holistic view of all the opportunities under multiple Local POS tagged to a Multinational Deal</description>
    <label>Global opportunity</label>
</RecordType>