force-app/main/default/objects/Opportunity/recordTypes/Group_Sales.recordType-meta.xml
<RecordType>
    <fullName>Group_Sales</fullName>
    <active>true</active>
    <businessProcess>Qantas Sales Process</businessProcess>
    <description>To be used to capture Group Sales &amp; Business Events related opportunities</description>
    <label>Groups</label>
</RecordType>