force-app/main/default/objects/Opportunity/recordTypes/GSA.recordType-meta.xml
<RecordType>
    <fullName>GSA</fullName>
    <active>true</active>
    <businessProcess>Qantas Sales Process</businessProcess>
    <description>To be used to capture all opportunities related to GSAs</description>
    <label>GSA</label>
</RecordType>