force-app/main/default/objects/Opportunity/recordTypes/Loyalty_Commercial.recordType-meta.xml
<RecordType>
    <fullName>Loyalty_Commercial</fullName>
    <active>true</active>
    <businessProcess>Loyalty Commercial Sales Process</businessProcess>
    <description>This record type process used by Qantas Loyalty Commercial team to capture the loyalty sales</description>
    <label>Loyalty Commercial</label>
</RecordType>