force-app/main/default/objects/Opportunity/recordTypes/SAF_Opportunity.recordType-meta.xml
<RecordType>
    <fullName>SAF_Opportunity</fullName>
    <active>true</active>
    <businessProcess>SAF Sales Process</businessProcess>
    <description>Sustainable aviation Fuel related Opportunities towards for Customers to purchase SAF fuel against Carbon Credits</description>
    <label>SAF Opportunity</label>
</RecordType>