force-app/main/default/objects/Opportunity/recordTypes/Sales_Development.recordType-meta.xml
<RecordType>
    <fullName>Sales_Development</fullName>
    <active>true</active>
    <businessProcess>Qantas Sales Process</businessProcess>
    <description>To be used to capture all opportunities related to Sales Development</description>
    <label>Sales Development</label>
</RecordType>