force-app/main/default/objects/Opportunity/recordTypes/Scheduled_Charters.recordType-meta.xml
<RecordType>
    <fullName>Scheduled_Charters</fullName>
    <active>true</active>
    <businessProcess>Charter</businessProcess>
    <description>To be used to capture all opportunities for Charters</description>
    <label>Scheduled Charters</label>
</RecordType>