force-app/main/default/objects/Opportunity/recordTypes/SME_Product.recordType-meta.xml
<RecordType>
    <fullName>SME_Product</fullName>
    <active>true</active>
    <businessProcess>Qantas Sales Process</businessProcess>
    <description>To be used to capture opportunities for SME products (Aquire, AEQCC and QBD)</description>
    <label>SME Product</label>
</RecordType>