force-app/main/default/objects/Opportunity/validationRules/Freight_Account_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Freight_Account_Validation</fullName>
    <active>true</active>
    <description>Freight - Users cannot select a Branch Account for a Freight Opportunity</description>
    <errorConditionFormula>AND(

$RecordType.DeveloperName = &quot;Freight&quot;, 
ISPICKVAL(Account.Type, &quot;Freight-Branch&quot;)

)</errorConditionFormula>
    <errorDisplayField>AccountId</errorDisplayField>
    <errorMessage>Please select a managed Freight-Country Account or an unmanaged account as Opportunities on a Freight Branch account are not allowed.</errorMessage>
</ValidationRule>